--- a/views/login.ejs
+++ b/views/login.ejs
@@ -94,7 +94,7 @@
 
         <div class="last">
             <!-- <label></label> -->
-            <input type="submit" " id="submit" name="submit"
+            <input type="submit" id="submit" name="submit"
                 style="width: 355px; background-color: #0165E1; font-weight: bold; color:white">
         </div>
     </form>
