--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,46 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= name %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<div  style=" display: flex; justify-content:space-around; align-items: center; padding:;
+margin-top:40px; width:auto; height:22px;">
+    
+    <p class="lead mb-3" style="font-weight: bold; font-size: 27px;">Welcome <%= name %>
+    </p>
+
+<div class="log">
+
+    <a href="/users/logout" class="btn btn-secondary" 
+    style="cursor:pointer;" 
+
+
+    >Logout</a>
+
+
+    </div></div>
+
+    
+
+
+
+<div class="alert alert-warning" role="alert" style="margin-top: 75px; display: flex; justify-content: center; align-items: center; ">
+    <p style="font-weight: bold; font-size: 27px;">
+    On Construction.
+    Have a patience!!!
+</p>
+  </div>
+  <div style="display: flex; justify-content: center; align-items: center;">
+  <img src="/public/images/construction.png" alt="logo" >
+</div>
+
+
+<div class="alert alert-warning" role="alert" style="margin-top: 140px;">
+<div class="names" >
+<h1>Created By:</h1>
+        <ul style="list-style-type: none;" >
+            <li>ANIL LAMA</li>
+            <li>NIRAJ POUDEL</li>
+            <LI>SAUGAT SHARMA</LI>
+            <LI>ANUP PARAJULI</LI>
+        </ul>
+
+
+</div>
+</div>
+</div>
