--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <div class="root">
       
     <div class="First_Section">
-        <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" width="510" height="510" viewBox="0 0 676 676"
+        <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" width=" 33.203125vw" height="68.36461126005362vh" viewBox="0 0 676 676"
             xmlns:xlink="http://www.w3.org/1999/xlink">
   
             <path
@@ -13,9 +13,6 @@
                 transform="translate(-262 -112)" fill="#0166e1" />
             <path
                 d="M901.92,591.16222c1.67,2.12,3.4,4.23,5.13,6.35a335.12127,335.12127,0,0,1-20.06,35.52q-.825-.58492-1.65-1.17a2.12042,2.12042,0,0,1-.25-.16c-2.05-1.46-4.11005-2.9-6.16-4.36v-.01a70.003,70.003,0,0,1-2.81-17.7,5.288,5.288,0,0,0,1.23-9.86005c-.27-.47-.46-.81-.73-1.29.01-.12.03-.25.04-.37C878.23,585.62224,894.15,581.26225,901.92,591.16222Z"
-                transform="translate(-262 -112)" fill="#fff" />
-            <path
-                d="M919.87,548.36223q1.8,4.95,3.28,10.01-1.02008,3-2.09,5.98-.405-1.575-.84-3.15a161.95685,161.95685,0,0,0-5.85-17.2q-2.79-6.915-6.18-13.54a170.35651,170.35651,0,0,0-51.96-60.5,45.35,45.35,0,0,1-23.43-13.78,34.85779,34.85779,0,0,1-5.57-8.26c.92-.13,1.84-.31,2.74-.5.28-.06.57-.13.85-.19l.11-.02a5.24141,5.24141,0,0,0,1.85-9.37994c-.51-.37006-1.03-.73-1.54-1.09-.78-.57-1.57-1.11-2.36-1.67a2.49231,2.49231,0,0,1-.24-.17c-.9-.64-1.8-1.26-2.69-1.91a15.19516,15.19516,0,0,1,3.49-5.96c5.59-5.77,15.57-5.63995,22.09-.94,6.53,4.7,9.81,12.93,10.23,20.95.37,6.87-1.11,13.67-3.06,20.3.49.36,1,.7,1.49,1.07a171.32688,171.32688,0,0,1,24.86,22.51c-4.35-10.32-5.93-23.78-4.8-33.05,1.29-10.56,6.42-20.59,10.62-30.58,5.03-12,22.19-12.16,27.03-.08.05.12006.1.23.14.35q-1.215,1.215-2.34,2.52a7.175,7.175,0,0,0,6.29,11.8l.15-.02a72.09554,72.09554,0,0,1,1.06,10.79,73.50777,73.50777,0,0,1-22.88,54.2c-.48.45-.95.89-1.44,1.32a170.65691,170.65691,0,0,1,12.45,20.67A172.4434,172.4434,0,0,1,919.87,548.36223Z"
                 transform="translate(-262 -112)" fill="#fff" />
             <path
                 d="M727.18537,454.54993l-3.02,207.41-243.96-7,38.96-86c-.28-2.76,17.1-22.13,17-25-.3-8.41,5.98-16.2,7-25,2.08-18.15-9.83-86.69-4.34-100.85a96.26746,96.26746,0,0,1,8.94-18.07995c3.12-4.72,6.32-7.9,9.38-9.05l9.02-21.02,8-12,62.77-18.59,6.94-2.06,16.19,15.8,11.44995,11.18,10.77,1.87c1.61.28,3.17.61,4.67.99a47.44209,47.44209,0,0,1,19.66,9.74C725.41535,392.85992,727.60536,422.9,727.18537,454.54993Z"
@@ -85,7 +82,7 @@
         </div>
         <div class="third">
             
-            <div class="check">
+            <div class="check" style="margin-top: 6px">
                 <label>
                 <input type="checkbox" style="width:20px; height:20px">
             </div>
@@ -94,9 +91,15 @@
 
         <div class="last">
             <!-- <label></label> -->
-            <input type="submit" id="submit" name="submit"
-                style="width: 355px; background-color: #0165E1; font-weight: bold; color:white">
+            <input type="submit" id="submit" value="LOG IN" name="submit"
+                style=" background-color: #0165E1; font-weight: bold; color:white">
         </div>
+        <div class="sign">
+            <div class="newUser">
+        <h5>New User? <a href="/users/register">Register Here</a></h5>
+    </div>
+        </a>
+      </div>
     </form>
     </div>
 </div>
